# Circuitpython_Multi_Keypad

./: README.md  README.rst  code_multi_macropad.py  multi_keypad.py  multi_macropad.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: multi_keypad_reverse_tft_feather.py  multi_keypad_simpletest.py  multi_macropad_simpletest.py
